# agentpod

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TESTING.md  docker-compose.prod.yml  docker-compose.yml  opencode.json  opencode.json.tui-migration.bak  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  tui.json  turbo.json
.forgejo/workflows/: build-containers.yml
.github/: dependabot.yml
.github/workflows/: build-deploy.yml  build-deploy.yml.disabled  ci.yml  release-node-agent.yml  release.yml
.opencode/command/: accessibility.md  component.md  design-system.md  model-doctor.md  responsive.md  ux-audit.md
.opencode/prompts/: agentic-ux.md  tauri-frontend.md  ui-review.md  ux-design.md
apps/api/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
apps/console/: package.json  svelte.config.js  vite.config.js  vitest.config.ts
apps/frontend/: package.json  vite.config.js
apps/frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/frontend/src-tauri/icons/: icon.icns
apps/frontend/src-tauri/src/: lib.rs
apps/frontend/src-tauri/src/commands/: agents.rs  auth.rs  connection.rs  docker.rs  mod.rs  onboarding.rs  projects.rs  sandboxes.rs  session_forks.rs  settings.rs  terminal.rs  voice.rs
apps/frontend/src-tauri/src/models/: agent.rs  error.rs  mod.rs  onboarding.rs  opencode.rs  session_fork.rs  settings.rs
apps/frontend/src-tauri/src/services/: api.rs  auth.rs  mod.rs  settings.rs  storage.rs
apps/frontend/src-tauri/src/voice/: audio_utils.rs  config.rs  mod.rs  model_manager.rs  recorder.rs  wakeword.rs  whisper.rs
apps/hub/: .dockerignore  .env.example  CLAUDE.md  README.md  drizzle.config.ts  package.json
apps/landing/: astro.config.mjs  package.json
apps/node-agent/: go.mod
apps/tui/: Cargo.toml
apps/tui/src/: app.rs  cli.rs  config.rs  event.rs  lib.rs  main.rs  types.rs  util.rs
apps/tui/src/api/: auth.rs  mod.rs  sandboxes.rs
apps/tui/src/terminal/: embedded.rs  external.rs  mod.rs
apps/tui/src/ui/: mod.rs  theme.rs
apps/tui/src/ui/views/: chat.rs  create_sandbox.rs  dashboard.rs  files.rs  git.rs  login.rs  mod.rs  providers.rs  settings.rs  terminal.rs
apps/tui/src/ui/widgets/: status_bar.rs  tab_bar.rs
apps/tui/tests/: api_tests.rs  app_tests.rs  config_tests.rs  create_sandbox_wizard_tests.rs  dashboard_action_tests.rs  login_tests.rs  sandbox_tests.rs  token_persistence_tests.rs
cloudflare/worker/: .dev.vars.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc  wrangler.toml
config/fluent-bit/: detect_level.lua  fluent-bit.conf  parsers.conf
config/loki/: local-config.yaml
daytona-poc/: .env.example  .gitignore  POC-REPORT.md  README.md  package.json  pnpm-lock.yaml
daytona-poc/docker/: docker-compose.yml
daytona-poc/scripts/: build-image.sh  setup-dns.sh
daytona-poc/src/: cleanup.ts  config.ts  create-sandbox.ts  daytona-client.ts  test-connection.ts
deploy/: README-deploy.md  agentpod-hub.service
deploy/nginx/: hub.agentpod.dev.conf
docker/: README.md
docker/base/: Dockerfile  README.md  entrypoint.sh
docker/opencode/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  entrypoint.sh
docker/opencode-cli/: Dockerfile  entrypoint.sh
docker/opencode-desktop/: Dockerfile  entrypoint.sh
docker/scripts/: build-addon.sh  build-base.sh  build-dev.sh  build-flavor.sh  build.sh  config.sh  login.sh  push.sh  test-containers.sh
docker/sso/: Dockerfile  README.md  docker-compose.yml  oauth2-proxy.cfg
docs/: DEPLOYMENT.md  OPERATING.md  README.md  RELEASE-v0.1.0.md  UI-UX-AUDIT-2026-06-29.md  design-language.md  opencode-plugins-skills.md  portable-command-center.md  technical-architecture.md  user-journey.md  vision
docs/agents/: README.md  agent-catalog.md  architecture.md  personality-framework.md
docs/architecture/: acp-protocol.md  redesign-plan.md  session-persistence.md  v2-architecture.md
docs/design/: 01-ui-review.md  03-page-catalog.md  agentic-ux-analysis.md  component-specifications.md  design-language.md  design-system-visual.html  generative-ui-architecture.md  shape-of-ai-patterns.md
docs/getting-started/: README.md  quick-start.md  self-hosting.md
docs/ideas/: cloudflare-sandbox-integration.md  opencode-cloudflare-use-cases.md
docs/implementation/: README.md  agent-management-system.md  autonomous-agentpod-poc.md  browser-sse-migration.md  cloudflare-workflows-migration.md  modular-containers-merge-plan.md  opencode-config-architecture.md  pending-work.md  voice-input-feature.md  workflow-builder-plan.md  workflow-nodes-catalog.md
docs/onboarding-system/: architecture.md  database-schema.sql  implementation-phases.md  opencode-config-explainer.md
docs/operations/: phase-1-security.md  phase-4-backup.md
docs/production-readiness/: PRODUCTION_CHECKLIST.md  README.md  phase-2-observability.md  phase-3-ci-cd.md  phase-4-backup.md
docs/research/: sandbox-environment-patterns.md
docs/testing/: api-testing-guide.md  e2e-testing-guide.md  frontend-testing-guide.md  tdd-workflow.md
docs/ui-ux/: 01-ui-review.md  02-agentic-ux-analysis.md  03-page-catalog.md  04-api-capabilities.md  05-state-architecture.md  06-implementation-plan.md  07-generative-ui-architecture.md  08-shape-of-ai-patterns.md  09-user-journey-paths.md  (+4 more)
keycloak/: README.md
management-api/: .env.example  README.md  package.json
scripts/: backup-db.sh  test-onboarding-e2e.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connection.rs  mod.rs  opencode.rs  projects.rs  settings.rs
src-tauri/src/models/: error.rs  mod.rs  opencode.rs  settings.rs
src-tauri/src/services/: api.rs  mod.rs  settings.rs  storage.rs
src-tauri/tests/: api_integration.rs  debug_message.rs
tauri-plugin-mcp/: .gitignore  Cargo.toml  README.md  build.rs  package-lock.json  package.json  pnpm-lock.yaml
(+1363 files in other folders)
