[package]
name = "codeopen"
version = "0.1.0"
description = "Portable Command Center for OpenCode"
authors = ["you"]
edition = "2021"

[lib]
name = "codeopen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-oauth = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
urlencoding = "2"
keyring = "3"
thiserror = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"
dotenv = "0.15"

