[package]
name = "agentpod-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for AgentPod - manage sandboxes, AI chat, and development from the command line"
license = "MIT"
authors = ["AgentPod Contributors"]
repository = "https://github.com/rakeshgangwar/agentpod"
keywords = ["tui", "terminal", "ai", "sandbox", "agentpod"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "agentpod-tui"
path = "src/main.rs"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# HTTP / API
reqwest = { version = "0.13", features = ["json", "stream", "native-tls"] }
futures-util = "0.3"

# WebSocket (terminal)
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }

# Embedded terminal (VT100)
vte = "0.15"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Config / paths
dirs = "6"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
textwrap = "0.16"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
