[package]
name = "agentpod"
version = "0.1.0"
description = "Portable Command Center for AI Coding Agents"
authors = ["you"]
edition = "2021"

[lib]
name = "agentpod_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.9.5", features = [] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-oauth = "2.0.0"
tauri-plugin-os = "2.3.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-fs = "2.4.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
http = "1"
# Use rustls with native root certificates for all platforms including Android/iOS
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots", "stream", "gzip", "deflate"], default-features = false }
urlencoding = "2"
keyring = "3"
thiserror = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
once_cell = "1.19"
url = "2.5"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri-plugin-http = "2"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1"
dotenv = "0.15"

